# gtalign_alpha

./: AUTHORS  BUILD_and_INSTALL__GPU__unix.sh  BUILD_and_INSTALL__GPU__unix__Hopper.sh  BUILD_and_INSTALL__GPU__unix__clang.sh  BUILD_and_INSTALL__GPU__win64.cmd  BUILD_and_INSTALL__mp__unix.sh  BUILD_and_INSTALL__mp__unix__clang.sh  BUILD_and_INSTALL__mp__win64.cmd  CITATION.cff.obs  ChangeLog  GTalign_demo.ipynb  GTalign_demo_search.ipynb  LICENSE.md  README.md  VERSION
Linux_installer_GPU/: GTalign-linux64-installer-GPU.sh
Linux_installer_mp/: GTalign-linux64-installer-mp.sh
imgs/: gtalign_header.jpg.obs
src/: CMakeLists.txt
src/extzlib/: CMakeLists.txt
src/gtalign/: CMakeLists.txt  gtalign.cpp  gtalign.h
src/incconf/: localconfig.h
src/libgenp/: CMakeLists.txt
src/libgenp/gdats/: DRDataDeleter.h  FlexDataRead.cpp  FlexDataRead.h  InputFilelist.cpp  InputFilelist.h  PM2DVectorFields.cpp  PM2DVectorFields.h  PMBatchStrData.cpp  PMBatchStrData.h  PMBatchStrData.inl  PMBatchStrDataIndex.cpp  PMBatchStrDataIndex.h  TdDataReader.cpp  TdDataReader.h  gdconst.h
src/libgenp/goutp/: TdAlnWriter.cpp  TdAlnWriter.h  TdAlnWriterJSON.cpp  TdAlnWriterPlain.cpp  TdClustWriter.cpp  TdClustWriter.h  TdFinalizer.cpp  TdFinalizer.h  TdFinalizerJSON.cpp  TdFinalizerPlain.cpp
src/libgenp/gproc/: btckcoords.h  dputils.h  gproc.h
src/libmycu/: CMakeLists.txt
src/libmycu/cubatch/: CuBatch.cu  CuBatch.cuh  TdCommutator.cpp  TdCommutator.h
src/libmycu/cucom/: cucommon.h  cudef.h  cugraphs.cuh  cutemplates.h  cutimer.cuh  myassert.h  myatomic.cuh  mymutex.cuh  mysort.cuh  warpscan.cuh
src/libmycu/cudp/: btck2match.cu  btck2match.cuh  constrained_btck2match.cu  constrained_btck2match.cuh  dpagc_ssw_btck_specscore.cu  dpagc_ssw_btck_specscore.cuh  dpagc_tfm_ssw_btck_specscore.cu  dpagc_tfm_ssw_btck_specscore.cuh  dpss.cu  dpss.cuh  dpsslocal.cu  dpsslocal.cuh  dpssw_btck.cu  dpssw_btck.cuh  dpssw_btck_specscore.cu  dpssw_btck_specscore.cuh  dpssw_tfm_btck.cu  dpssw_tfm_btck.cuh  dpw_btck.cu  dpw_btck.cuh  dpw_btck_specscore.cu  dpw_btck_specscore.cuh  dpw_score.cu  dpw_score.cuh  production_match2aln.cu  production_match2aln.cuh
src/libmycu/cudp2/: dpw_btck_complete.cu  dpw_btck_complete.cuh
src/libmycu/cufilter/: coverage.cu  coverage.cuh  reformatter.cu  reformatter.cuh  similarity.cu  similarity.cuh
src/libmycu/culayout/: CuDeviceMemory.cu  CuDeviceMemory.cuh  cuconstant.cuh
src/libmycu/cumath/: cumath.h
src/libmycu/cuproc/: Devices.cu  Devices.h  JobDispatcher.cpp  JobDispatcher.h  cuprocconf.cpp  cuprocconf.h
src/libmycu/cuss/: cusecstr.cu  cusecstr.cuh  ssk.cu  ssk.cuh  sskbase.cuh  sskna.cu  sskna.cuh
src/libmycu/custage1/: custage1.cu  custage1.cuh  custage2.cu  custage2.cuh  custage_fin.cu  custage_fin.cuh  custage_frg3.cu  custage_frg3.cuh  custage_ssrr.cu  custage_ssrr.cuh
src/libmycu/custages/: covariance.cu  covariance.cuh  covariance_dp_refn.cu  covariance_dp_refn.cuh  covariance_dp_scan.cu  covariance_dp_scan.cuh  covariance_plus.cu  covariance_plus.cuh  covariance_refn.cu  covariance_refn.cuh  covariance_swift_scan.cu  covariance_swift_scan.cuh  fields.cuh  fragment.cuh  scoring.cu  scoring.cuh  stagecnsts.cuh  transform.cu  transform.cuh
src/libmycu/custages2/: covariance_complete.cu  covariance_complete.cuh  covariance_dp_refn_complete.cu  covariance_dp_refn_complete.cuh  covariance_fin_dp_refn_complete.cu  covariance_fin_dp_refn_complete.cuh  covariance_production_dp_refn_complete.cu  covariance_production_dp_refn_complete.cuh  covariance_refn_complete.cu  covariance_refn_complete.cuh  production_2tmscore.cu  production_2tmscore.cuh
src/libmycu/custgfrg/: linear_scoring.cu  linear_scoring.cuh  linear_scoring2.cu  linear_scoring2.cuh  local_similarity0.cu  local_similarity0.cuh  local_similarity02.cu  local_similarity02.cuh
src/libmycu/custgfrg2/: linear_scoring2_complete.cu  linear_scoring2_complete.cuh
src/libmymp/: CMakeLists.txt
src/libmymp/mpbatch/: MpBatch.cpp  MpBatch.h
src/libmymp/mpdp/: MpDPHub.cpp  MpDPHub.h  mpdpbase.h
src/libmymp/mpfilter/: MpReform.cpp  MpReform.h
src/libmymp/mplayout/: MpGlobalMemory.cpp  MpGlobalMemory.h
src/libmymp/mpproc/: TaskScheduler.cpp  TaskScheduler.h  mpprocconf.h  mpprocconfbase.h
src/libmymp/mpss/: MpSecStr.cpp  MpSecStr.h  MpSecStrBase.h
src/libmymp/mpstage1/: MpStage1.cpp  MpStage1.h  MpStage2.h  MpStageBase.cpp  MpStageBase.h  MpStageFin.cpp  MpStageFin.h  MpStageFrg3.cpp  MpStageFrg3.h  MpStageSSRR.h
src/libmymp/mpstages/: covariancebase.h  linearscoringbase.h  scoringbase.h  transformbase.h
src/libmymp/mputil/: simdscan.h
src/libmympbase/: CMakeLists.txt
src/libmympbase/mplayout/: CuMemoryBase.cpp  CuMemoryBase.h
src/libutil/: CLOptions.cpp  CLOptions.h  CMakeLists.txt  alpha.cpp  alpha.h  cnsts.h  debug.h  format.h  macros.h  mptimer.h  msg.cpp  msg.h  mybase.h  mydirent.cpp  mydirent.h  myexception.cpp  myexception.h  myfiler.cpp  myfiler.h  mygetopt.cpp  mygetopt.h  mylimits.h  mymemory.h  mytype.h  platform.h  preproc.h  templates.h
src/tsafety/: TSCounterVar.h
